--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-ага
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <style>
+        body {
+            background-color: rgb(185, 185, 200);
+        }
+    </style>
+</head>
+<body>
+    <div style="
+        display: flex;
+        background-color: rgb(112, 112, 121);
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    ">
+        <h1>Заголовок</h1>
+        <p>І не тільки.</p>
+    </div>
+</body>
+</html>
